Start to use e820 map in mm_init()
Cleaned up bootmem allocator stuff. Use e820 to count physical pages. We're
still not reserving all the BOOTMEM parts of the map. That needs to be the
next change.

--- a/arch-ia32/Makefile
+++ b/arch-ia32/Makefile
@@ -15,4 +15,4 @@ kernel.elf.gz: kernel.elf
 all: kernel.elf.gz
 
 clean:
-	$(RM) -f *.o .depend kernel.elf
+	$(RM) -f *.o Make.dep kernel.elf kernel.elf.gz
