Fix link step to provide bootable fucking kernel

--- a/arch-ia32/Makefile
+++ b/arch-ia32/Makefile
@@ -4,15 +4,16 @@ OBJS=entry.o setup.o io.o vga.o idt.o 8259a.o \
 	intr.o irq.o pc_keyb.o timer.o task.o \
 	floppy.o dma.o pci.o mm.o
 
-kernel.elf: $(OBJS)
-	$(GCC) -o $@ -T kernel.lnk -nostdlib -Wl,-N -Wl \
-		$^ ../kernel/kernel.o ../fs/fs.o
+kernel.elf: $(OBJS) kernel.lnk
+	$(LD) -o $@ -T kernel.lnk -nostdlib -N \
+		$(OBJS) ../kernel/kernel.o ../fs/fs.o
 
-kernel.elf.gz: kernel.elf
-	cp $< $<.stripped
-	$(STRIP) $<.stripped
-	gzip -c < $<.stripped > $@
-	$(RM) -f $<.stripped
+kernel.elf.stripped: kernel.elf
+	$(CP) $< $@
+	$(STRIP) $@
+
+kernel.elf.gz: kernel.elf.stripped
+	gzip -c < $< > $@
 
 all: kernel.elf.gz
 
