l33t new iterative build system, fucking works

--- a/arch-ia32/Makefile
+++ b/arch-ia32/Makefile
@@ -1,21 +1,16 @@
-include $(TOPDIR)/Make.opts
+ARCH_C_SOURCES = $(ARCH_DIR)/8259a.c \
+		$(ARCH_DIR)/dma.c \
+		$(ARCH_DIR)/floppy.c \
+		$(ARCH_DIR)/idt.c \
+		$(ARCH_DIR)/irq.c \
+		$(ARCH_DIR)/mm.c \
+		$(ARCH_DIR)/pci.c \
+		$(ARCH_DIR)/pc_keyb.c \
+		$(ARCH_DIR)/setup.c \
+		$(ARCH_DIR)/task.c \
+		$(ARCH_DIR)/timer.c \
+		$(ARCH_DIR)/vga.c
 
-OBJS=entry.o setup.o io.o vga.o idt.o 8259a.o \
-	intr.o irq.o pc_keyb.o timer.o task.o \
-	floppy.o dma.o pci.o mm.o
-
-kernel.elf: $(OBJS) kernel.lnk
-	$(LD) -o $@ -T kernel.lnk -nostdlib -N \
-		$(OBJS) ../kernel/kernel.o ../fs/fs.o
-
-kernel.elf.stripped: kernel.elf
-	$(CP) $< $@
-	$(STRIP) $@
-
-kernel.elf.gz: kernel.elf.stripped
-	gzip -c < $< > $@
-
-all: kernel.elf.gz
-
-clean:
-	$(RM) -f *.o Make.dep kernel.elf kernel.elf.gz kernel.elf.stripped
+ARCH_ASM_SOURCES = $(ARCH_DIR)/entry.S \
+			$(ARCH_DIR)/intr.S \
+			$(ARCH_DIR)/io.S
