Fix pusha stack layout issue, was relying on a bullshit source for stack order

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -6,5 +6,6 @@ KERNEL_C_SOURCES = \
 	$(KERNEL_DIR)/kmalloc.c \
 	$(KERNEL_DIR)/printk.c \
 	$(KERNEL_DIR)/sched.c \
+	$(KERNEL_DIR)/exec.c \
 	$(KERNEL_DIR)/string.c \
 	$(KERNEL_DIR)/vsprintf.c
