Implement fully working slab allocator, expanded size of struct page a bit ;)

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -3,6 +3,7 @@ KERNEL_C_SOURCES = \
 	$(KERNEL_DIR)/blkdev.c \
 	$(KERNEL_DIR)/buddy.c \
 	$(KERNEL_DIR)/ctype.c \
+	$(KERNEL_DIR)/memchunk.c \
 	$(KERNEL_DIR)/kmalloc.c \
 	$(KERNEL_DIR)/printk.c \
 	$(KERNEL_DIR)/sched.c \
