Implement inode cache

--- a/fs/Makefile
+++ b/fs/Makefile
@@ -1,4 +1,5 @@
-FS_C_SOURCES = $(FS_DIR)/dentry.c \
+FS_C_SOURCES = $(FS_DIR)/mount.c \
+		$(FS_DIR)/dentry.c \
 		$(FS_DIR)/ext2.c \
 		$(FS_DIR)/inode.c \
 		$(FS_DIR)/vfs.c \
