Remove kernel-thread multi-tasking demo in favour of userspace fork()
Which is soon to be implemented.

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -3,6 +3,7 @@ KERNEL_C_SOURCES = \
 	$(KERNEL_DIR)/blk.c \
 	$(KERNEL_DIR)/blkdev.c \
 	$(KERNEL_DIR)/buddy.c \
+	$(KERNEL_DIR)/fork.c \
 	$(KERNEL_DIR)/pagecache.c \
 	$(KERNEL_DIR)/semaphore.c \
 	$(KERNEL_DIR)/ctype.c \
