--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -15,4 +15,5 @@ KERNEL_C_SOURCES = \
 	$(KERNEL_DIR)/exec.c \
 	$(KERNEL_DIR)/string.c \
 	$(KERNEL_DIR)/rbtree.c \
-	$(KERNEL_DIR)/vsprintf.c
+	$(KERNEL_DIR)/vsprintf.c \
+	$(KERNEL_DIR)/open.c
