Add userland targets to boot floppy make target

--- a/user/Makefile
+++ b/user/Makefile
@@ -72,5 +72,9 @@ endif
 
 all: Makefile $(ALL_TARGETS)
 
+boot_floppy: all
+	@e2cp init $(BOOT_FLOPPY):/sbin/
+	@e2cp cpuhog-[ab] $(BOOT_FLOPPY):/sbin/
+
 clean:
 	rm -f $(ALL_OBJ) $(ALL_DEP) $(ALL_TARGETS)
