--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -16,4 +16,6 @@ KERNEL_C_SOURCES = \
 	$(KERNEL_DIR)/string.c \
 	$(KERNEL_DIR)/rbtree.c \
 	$(KERNEL_DIR)/vsprintf.c \
-	$(KERNEL_DIR)/open.c
+	$(KERNEL_DIR)/open.c \
+	$(KERNEL_DIR)/read.c \
+	$(KERNEL_DIR)/close.c
