Move fdt to kernel per @giannitedesco

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -16,6 +16,7 @@ KERNEL_C_SOURCES = \
 	$(KERNEL_DIR)/string.c \
 	$(KERNEL_DIR)/rbtree.c \
 	$(KERNEL_DIR)/vsprintf.c \
+	$(KERNEL_DIR)/fdt.c \
 	$(KERNEL_DIR)/open.c \
 	$(KERNEL_DIR)/read.c \
 	$(KERNEL_DIR)/close.c
