--- a/user/Makefile
+++ b/user/Makefile
@@ -61,12 +61,21 @@ CAT_C_SOURCES := cat.c
 CAT_OBJ := $(patsubst %.c, %.o, $(CAT_C_SOURCES))
 cat: $(CAT_OBJ)
 
+TRUE_ASM_SOURCES := true.S
+TRUE_OBJ := $(patsubst %.c, %.o, $(CAT_ASM_SOURCES))
+true: $(TUE_OBJ)
+
+TRUE_ASM_SOURCES := false.S
+TRUE_OBJ := $(patsubst %.c, %.o, $(CAT_ASM_SOURCES))
+true: $(TUE_OBJ)
+
 SBIN_TARGETS := init cpuhog-a cpuhog-b
-BIN_TARGETS := cat
+BIN_TARGETS := cat true false
 ALL_TARGETS := $(C_RUNTIME) $(SBIN_TARGETS) $(BIN_TARGETS)
 
-ALL_OBJ := $(CRT_OBJ) $(INIT_OBJ) $(CPUHOGA_OBJ) $(CPUHOGB_OBJ) $(CAT_OBJ)
-ALL_ASM := $(CRT_ASM_SOURCES)
+ALL_OBJ := $(CRT_OBJ) $(INIT_OBJ) $(CPUHOGA_OBJ) $(CPUHOGB_OBJ) $(CAT_OBJ) \
+		$(TRUE_OBJ) $(FALSE_OBJ)
+ALL_ASM := $(CRT_ASM_SOURCES) $(TRUE_ASM_SOURCES)
 ALL_C   := $(CRT_C_SOURCES) $(INIT_C_SOURCES) $(CPUHOGA_C_SOURCES) $(CPUHOGB_C_SOURCES) $(CAT_C_SOURCES)
 
 ALL_DEP :=  $(patsubst %.S, %.d, $(ALL_ASM)) \
