--- a/user/Makefile
+++ b/user/Makefile
@@ -8,7 +8,7 @@ TOPDIR :=  .
 .PHONY: all clean boot_floppy
 TARGET: all
 
-LDFLAGS := -melf_i386 -nostdlib -N --strip-all -e_start
+LDFLAGS := -melf_i386 -nostdlib -e_start --strip-all
 CFLAGS  := -pipe -ggdb -Os -Wall -ffreestanding -fno-stack-protector \
 	-Wsign-compare -Wcast-align -Waggregate-return \
 	-Wstrict-prototypes -Wmissing-prototypes \
