Move and rename ia32 IDE driver to generic ATA driver
In preparation for making it a PCI-ATA driver with vendor-specific
extenstion functionality.

--- a/arch-ia32/Makefile
+++ b/arch-ia32/Makefile
@@ -11,8 +11,7 @@ ARCH_C_SOURCES = $(ARCH_DIR)/8259a.c \
 		$(ARCH_DIR)/task.c \
 		$(ARCH_DIR)/timer.c \
 		$(ARCH_DIR)/serio.c \
-		$(ARCH_DIR)/vga.c \
-		$(ARCH_DIR)/ide.c
+		$(ARCH_DIR)/vga.c
 
 ARCH_ASM_SOURCES = $(ARCH_DIR)/entry.S \
 			$(ARCH_DIR)/intr.S \
