Fix for modern gcc's
Get rid of -fPIE and link libgcc

--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -1,2 +1,3 @@
 DRIVERS_C_SOURCES = $(DRIVERS_DIR)/pci.c \
-		    $(DRIVERS_DIR)/ata.c
+		    $(DRIVERS_DIR)/ata.c \
+		    $(DRIVERS_DIR)/partition.c
